# LightDance-Editor

./: .dockerignore  .eslintrc.js  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE  README.md  deploy.sh  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yaml  git.txt  package-lock.json  package.json  pnpm-lock.yaml  prod.docker-compose.yml  tsconfig.json
command-center/: .prettierrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml  server.py  tsconfig.json
command-center/src/: __main__.py  app.py  app.tsx  cli.tsx  config.py
command-center/src/api/: __init__.py  message.py
command-center/src/containers/: control.tsx  log.tsx  status.tsx
command-center/src/handlers/: __init__.py  control.py
command-center/src/hooks/: useDancer.tsx  useDimensions.ts
command-center/src/lps_ctrl/: __init__.py  bt_sender.py  tcp_server.py
command-center/src/screens/: __init__.py  control.py  info.py  log.py  parttest.py
command-center/src/styles/: control.tcss
command-center/src/types/: __init__.py  api.ts  app.py
command-center/src/utils/: convert.py
data/: control.json  (+12 more)
editor-blender/: .env.development  .gitignore  README.md  __init__.py  blender_manifest.toml  preferences.py  pyproject.toml  requirements.prod.txt  requirements.py  requirements.txt
editor-blender/.wheels-cache/: context.sha1  integrity.sha1
editor-blender/.wheels-cache/unix/: aiohappyeyeballs-2.4.4-py3-none-any.whl  aiohttp-3.11.11-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  attrs-24.3.0-py3-none-any.whl  backoff-2.2.1-py3-none-any.whl  charset_normalizer-3.4.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  frozenlist-1.5.0-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  gql-3.5.0-py2.py3-none-any.whl  graphql_core-3.2.5-py3-none-any.whl  httpcore-1.0.7-py3-none-any.whl  multidict-6.1.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  propcache-0.2.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  websockets-11.0.3-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  yarl-1.18.3-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
editor-blender/.wheels-cache/win/: aiohttp-3.11.11-cp311-cp311-win_amd64.whl  anyio-4.8.0-py3-none-any.whl  charset_normalizer-3.4.1-cp311-cp311-win_amd64.whl  dataclass_wizard-0.34.0-py2.py3-none-any.whl  frozenlist-1.5.0-cp311-cp311-win_amd64.whl  multidict-6.1.0-cp311-cp311-win_amd64.whl  propcache-0.2.1-cp311-cp311-win_amd64.whl  python_dotenv-1.0.1-py3-none-any.whl  typeguard-4.4.1-py3-none-any.whl  websockets-11.0.3-cp311-cp311-win_amd64.whl  yarl-1.18.3-cp311-cp311-win_amd64.whl
editor-blender/api/: __init__.py  auth_agent.py  client.py  color_agent.py  command_agent.py  control_agent.py  dancer_agent.py  led_agent.py  model_agent.py  ping_agent.py  pos_agent.py  time_shift_agent.py
editor-blender/client/: __init__.py  cache.py  subscription.py
editor-blender/core/asyncio/: __init__.py
editor-blender/core/config/: __init__.py
editor-blender/core/constants/: __init__.py
editor-blender/core/log/: __init__.py
editor-blender/core/models/: __init__.py
editor-blender/core/states/: __init__.py
editor-blender/core/utils/: algorithms.py  convert.py  get_data.py  notification.py  object.py  operator.py  ui.py
editor-blender/graphqls/: __init__.py  command.py  common.py  mutations.py  queries.py  subscriptions.py
editor-blender/handlers/: __init__.py  animation.py  auto_select.py  beat.py  beat_matching.py  frame.py  keymap.py  name_tag.py  objects.py  owner.py  waveform.py
editor-blender/handlers/property/: lights.py  login.py
editor-blender/icons/: __init__.py
editor-blender/operators/: __init__.py  utils.py
editor-blender/operators/animation/: __init__.py
editor-blender/operators/assets/: __init__.py
editor-blender/operators/async_core/: __init__.py
editor-blender/operators/auth/: __init__.py
editor-blender/operators/camera/: __init__.py
editor-blender/operators/clipboard/: __init__.py
editor-blender/operators/color_palette/: __init__.py
editor-blender/operators/command_center/: __init__.py
editor-blender/operators/control_editor/: __init__.py
editor-blender/operators/editor/: __init__.py
editor-blender/operators/led_editor/: __init__.py
editor-blender/operators/load/: __init__.py
editor-blender/operators/login/: __init__.py
editor-blender/operators/notification/: __init__.py
editor-blender/operators/pin/: __init__.py
editor-blender/operators/ping/: __init__.py
editor-blender/operators/pos_editor/: __init__.py
editor-blender/operators/select/: __init__.py
editor-blender/operators/setup/: __init__.py
editor-blender/operators/shift/: __init__.py
editor-blender/pack/: .env.production  pack.py  requirements.py
editor-blender/panels/: __init__.py
editor-blender/properties/: __init__.py  color_palette.py  lights.py  login.py  objects.py  position.py  preferences.py  revision.py  scene.py  timeline.py  types.py  waveform.py
editor-blender/release/: pack.py  requirements.py
editor-blender/schemas/: command.py  mutations.py  queries.py  subscriptions.py
editor-blender/scripts/: bundle.sh  unify_spheres.py
editor-blender/storage/: __init__.py
editor-server/: .env.defaults  .env.development  .env.production  .eslintrc.cjs  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  schema.gql  schema.graphql  tsconfig.json
editor-server/.cargo/: config.toml
editor-server/prisma/: Cargo.toml  schema copy.prisma  schema.prisma
editor-server/sea-orm/: Cargo.toml
editor-server/seaorm/: Cargo.toml
editor-server/src/: authentication.ts  color-resolver.ts  global.rs  index.ts  initUser.ts  lib.rs  main.rs  mongo.ts  prisma.ts  redis.ts  schema.gql  schema.graphql  utility.ts
editor-server/tests/: api_tests.rs  auth.rs  check_token.rs  color.rs  data.rs  graphql.rs  led.rs  login_correct.rs  login_false.rs  logout.rs  position_frame.rs  position_map.rs
(+1348 files in other folders)
