[project]
name = "LightDance-Editor"
version = "1.3.0"
description = "A Blender editor for LightDance"
requires-python = "==3.12.3"
dependencies = [
  "fake-bpy-module-4.2",
  "toml",
  "gql[all]",
  "dataclass_wizard",
  "aiohttp",
  "python-dotenv",
  "typeguard",
  "websockets",
  "pip",
  "pyright",
]
license = "MIT"

[tool.pyright]
pythonVersion = "3.12"

typeCheckingMode = "standard"
reportMissingTypeStubs = false

reportUnusedVariable = "warning"
reportUnusedImport = "warning"
reportUnusedFunction = "warning"

reportIncompatibleMethodOverride = false

reportUnknownMemberType = false

[tool.black]

[tool.isort]
profile = "black"
