[package]
rust-version = "1.70.0"
name = "editor-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma"]

[dependencies]
argon2 = "0.5.2"
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["ws", "form", "multipart"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
futures-channel = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
http = "0.2.7"
itertools = "0.12.0"
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = "1.0.188"
serde_json = "1.0.107"
slab = "0.4.9"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "migrate", "postgres"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors"] }
tower-service = "0.3.2"
uuid = { version = "1.6.1", features = ["v4"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
