[package]
rust-version = "1.75.0"
name = "editor-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prisma"]

[dependencies]
argon2 = "0.5.2"
async-graphql = { version = "7.0.14", features = ["tracing"] }
async-graphql-axum = "7.0.14"
async-trait = "0.1.74"
axum = { version = "0.8.1", features = ["ws", "form", "multipart", "macros", "json"] }
axum-extra = { version = "0.11.0", features = ["cookie"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
futures = "0.3.30"
futures-channel = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
http = "0.2.7"
itertools = "0.13.0"
indicatif = { version = "*" }
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = "1.0.188"
serde_json = "1.0.107"
slab = "0.4.9"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio", "migrate", "postgres", "chrono"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tower-service = "0.3.2"
uuid = { version = "1.6.1", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
