[package]
rust-version = "1.75.0"
name = "editor-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["sea-orm", "sea-orm/migration"]

[dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7.0.11", features = ["tracing"] }
async-graphql-axum = "7.0.14"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["ws", "form", "multipart", "macros", "json"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.16.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
http = "1.2.0"
itertools = "0.14.0"
indicatif = { version = "*" }
once_cell = "1.20.2"
redis = { version = "0.29.1", features = ["tokio-comp"] }
serde = "1.0.217"
serde_json = "1.0.137"
slab = "0.4.9"
sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio", "migrate", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower-service = "0.3.3"
uuid = { version = "1.12.1", features = ["v4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.12", features = ["json"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
