[package]
rust-version = "1.75.0"
name = "prisma"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "migrations",
    "mysql",
], default-features = false }
dotenv = "0.15.0"
mysql = "26.0.0"
